<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title=""
        android:id="@+id/number_in_focus"
        android:contentDescription="@string/phone_number">
        <menu>
            <item android:title="@string/copy_number"
                android:id="@+id/copy_number"
                android:icon="@drawable/ic_sms_notify"
                android:contentDescription="@string/copy_number"/>

            <item android:title="@string/edit_number"
                android:id="@+id/edit_number"
                android:icon="@drawable/ic_edit"
                android:contentDescription="@string/edit_number"/>

            <item android:title="@string/delete_number"
                android:id="@+id/delete_number"
                android:icon="@drawable/ic_delete"
                android:contentDescription="@string/block_number"/>

            <item android:title="@string/block_number"
                android:id="@+id/block_number"
                android:icon="@drawable/ic_block"
                android:contentDescription="@string/block_number"/>
        </menu>

    </item>

</menu>