<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--This items are for the radio button for the user to chose either  a light or dark theme-->
    <item android:title="@string/select_theme">
        <menu>
            <group android:checkableBehavior="single" android:id="@+id/theme_group">
                <item
                    android:title="@string/phone_notifications"
                    android:id="@+id/phone_notification"
                    android:enabled="true"
                    android:checkable="true"
                    app:actionViewClass="android.widget.RadioButton"
                    android:contentDescription="@string/phone_notifications"
                    android:icon="@drawable/ic_phone_notify"
                    app:showAsAction="ifRoom"/>

                <item
                    android:title="@string/sms_notification"
                    android:id="@+id/sms_notification"
                    android:enabled="true"
                    android:checkable="true"
                    app:actionViewClass="android.widget.RadioButton"
                    android:contentDescription="@string/sms_notification"
                    android:icon="@drawable/ic_sms_notify"
                    app:showAsAction="ifRoom"/>

                <item
                    android:title="@string/call_notification"
                    android:id="@+id/call_notification"
                    android:enabled="true"
                    android:checkable="true"
                    app:actionViewClass="android.widget.RadioButton"
                    android:contentDescription="@string/sms_notification"
                    android:icon="@drawable/ic_sms_notify"
                    app:showAsAction="ifRoom"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/permission">
        <menu>
            <item android:id="@+id/location_switch"
                android:title="@string/location_permission"
                android:contentDescription="@string/location_permission"
                app:actionViewClass="android.widget.Switch"
                android:enabled="true"
                app:showAsAction="always"/>

            <item android:id="@+id/incoming_call"
                android:title="@string/location_permission"
                android:contentDescription="@string/location_permission"
                app:actionViewClass="android.widget.Switch"
                android:enabled="true"
                app:showAsAction="always"
                />

        </menu>
    </item>


</menu>