<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:id="@+id/new_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="New password"
            android:padding="15dp"/>


        <EditText
            android:id="@+id/new_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="40dp"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/password"
            android:inputType="numberPassword" />

        <!--    Enter new password again-->

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="15sp"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="40dp"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:padding="15dp"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/change_passwords" />
    </LinearLayout>


</LinearLayout>