<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="login page scrollable
">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/black"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Login Details"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:padding="5dp"
                        android:gravity="start"/>

                    <EditText
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:hint="email"
                        android:padding="15dp"/>
                </LinearLayout>


                <!--Password filed layout to hold the password and the password
                reveal icon-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:padding="5dp"
                        android:gravity="start"/>


                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:hint="password"
                        android:padding="15dp"/>

                </LinearLayout>


                <TextView
                    android:id="@+id/forgotten_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotten_password"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/secondaryColor"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/sign_in"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

                <Button
                    android:id="@+id/biometric_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/login_with_password"
                    android:layout_marginBottom="20dp"
                    android:textSize="15sp"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
</RelativeLayout>